# generative_social_choice

./: .gitignore  Pipfile  README.md  debugging.py  pyproject.toml  run.py  setup.py
chatbot_personalization/data/: ratings_and_matching.csv  user_summaries_generation_raw_output.csv
chatbot_personalization/paper_replication/: compute_matching.py  gen_query_eval.py  generate_slate.py  generate_summaries.py  validate_discriminative_query.py
chatbot_personalization/plots/: fig2_slate_composition.ipynb
chatbot_personalization/queries/: pseudocode.py  query_chatbot_personalization.py  query_interface.py
chatbot_personalization/slates/: generate_slate_ensemble_greedy.py
chatbot_personalization/test/: test_generate_slate.py  test_gpt_wrapper.py  test_optimize_monroe_matching.py  test_prompts_match_paper.py
chatbot_personalization/utils/: dataframe_completion.py  gpt_wrapper.py  helper_functions.py
gen_social_choice/paper_replication/: compute_matching.py  gen_query_eval.py  generate_slate.py  generate_summaries.py  validate_discriminative_query.py
gen_social_choice/plots/: fig1_disc_query_eval.ipynb  fig4_assigned_utilities_pie_chart.ipynb  generate_plots.ipynb
gen_social_choice/queries/: query_chatbot_personalization.py  query_interface.py
gen_social_choice/ratings/: rating_generation.py  utility_matrix.py
gen_social_choice/scripts/: batch_discrimination.py  compute_assignments.py  generate_statements.py  rate_statements.py
gen_social_choice/slates/: slate_generation.py  survey_assignments.py  voting_algorithm_axioms.py  voting_algorithms.py
gen_social_choice/statements/: partitioning.py  statement_generation.py
(+359 files in other folders)
