[tool.poetry]
name = "generative-social-choice"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.12"
openai = "*"
gurobipy = "*"
pandas = "*"
numpy = "*"
tenacity = "*"
matplotlib = "*"
seaborn = "*"
parameterized = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
